syntax = "proto3";

option csharp_namespace = "Enviromental_Variables_Measurement.GrpcProto";

package GrpcProtos;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto"; 

service VariableService {
    rpc CreateVariable (CreateVariableRequest) returns (VariableDTO);
    rpc GetVariable (GetRequest) returns (NullableVariableDTO);
    rpc GetAllVariables (google.protobuf.Empty) returns (Variables);
    rpc UpdateVariable (VariableDTO) returns (google.protobuf.Empty);
    rpc DeleteVariable (DeleteRequest) returns (google.protobuf.Empty);
}

message VariableDTO {
    string id = 1; // ID de la variable
    string variableName = 2; // Nombre de la variable
    MeasurementUnit measurementUnit = 3; // Unidad de medida
    string variableCode = 4; // Código de la variable
    VariableType type = 5; // Tipo de variable
    string buildingID = 6; // ID del edificio (opcional)
    string floorID = 7; // ID del piso (opcional)
    string roomID = 8; // ID de la habitación (opcional)
}

message Variables {
    repeated VariableDTO items = 1; // Lista de variables
}

message NullableVariableDTO {
    oneof kind {
        google.protobuf.Empty null = 1; // Caso nulo
        VariableDTO variable = 2; // Variable existente
    }
}

message CreateVariableRequest {
    string variableName = 1; // Nombre de la variable
    MeasurementUnit measurementUnit = 2; // Unidad de medida
    string variableCode = 3; // Código de la variable
    VariableType type = 4; // Tipo de variable
    string buildingID = 5; // ID del edificio (opcional)
    string floorID = 6; // ID del piso (opcional)
    string roomID = 7; // ID de la habitación (opcional)
}


